# rust-userservice

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 0001_uers_table.sql
src/: main.rs
src/v1/: models.rs  routes.rs
