[package]
name = "userservice"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "tls-rustls",
] }
dotenv = "0.15.0"
